--- a/Login Page/login.css
+++ b/Login Page/login.css
@@ -9,7 +9,7 @@
     padding: 0.5em 2em;
     border: transparent;
     justify-content: center;
-    font-size: large;
+    font-size: 10px;
 
 }
 
@@ -105,24 +105,30 @@
 
 
   .parent1{
-    height: 30px;
+    width: absolute;
+    height: 50px;
     border: 1px solid;
-    border-color: white;
+    border-color: navy;
     padding: 1px 1px;
     margin: 1px;  
 }
 
 
 .child1 {
-    display: inline-block;
+    display: inline-flex;
     height: 50px;
     font-size: 17px;
     padding: 0.5em 2em;
-    border: transparent;
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
     background: dodgerblue;
     color: white;
     border-radius: 4px;
+    width: 150px;
+    border: 1px solid;
+    top: 5%;
+    vertical-align: middle;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
    }
    
    child1:hover {
@@ -135,15 +141,22 @@
    }
 
    .child2 {
-    display: inline-block;
+    display: inline-flex;
     height: 50px;
     font-size: 17px;
     padding: 0.5em 2em;
     border: transparent;
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
     background: dodgerblue;
     color: white;
     border-radius: 4px;
+    width: 150px;
+    border: 1px solid;
+    top: 100px;
+    vertical-align: middle;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
    }
    
    child2:hover {
@@ -155,15 +168,21 @@
     transform: translate(0em, 0.2em);
    }
 
-   .child3 {
+   .child3{
+    display: inline-flex;
     font-size: 17px;
     height: 50px;
-    padding: 0.5em 2em;
     border: transparent;
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
     background: dodgerblue;
     color: white;
     border-radius: 4px;
+    width: 150px;
+    border: 1px solid;
+    vertical-align: middle;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
    }
    
    child3:hover {
@@ -175,4 +194,39 @@
     transform: translate(0em, 0.2em);
    }
 
+   .child12{
+    display: inline-block;
+    font-size: 17px;
+    height: 50px;
+    border: transparent;
+    background: navy;
+    color: white;
+    border-radius: 4px;
+    width: 150px;
+    border: 1px solid;
+    vertical-align: middle;
+    text-align: center;
+    position: absolute;
+    right: 165px;
+    top: 71px;
+   }
 
+   .child13{
+    display: inline-block;
+    font-size: 17px;
+    height: 50px;
+    padding: 0.5em 2em;
+    border: transparent;
+    background: navy;
+    color: white;
+    border-radius: 4px;
+    width: 150px;
+    border: 1px solid;
+    top: 5%;
+    vertical-align: middle;
+    text-align: center;
+    position: absolute;
+    right: 11px;
+    top: 71px;
+
+   }
